add styles and fix toastify

--- a/src/index.css
+++ b/src/index.css
@@ -45,9 +45,10 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin-left: 5px;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: rgb(107, 40, 20);
 }
 button:focus,
 button:focus-visible {
