--- a/src/components/TaskForm/AddTask.css
+++ b/src/components/TaskForm/AddTask.css
@@ -7,3 +7,8 @@
     border-spacing: 1re;
     margin-bottom: 10px;
 }
+input{
+    background-color: rgba(69, 9, 124, 0.356);
+    outline: hidden;
+    
+}
