--- a/src/index.css
+++ b/src/index.css
@@ -29,11 +29,13 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  position: relative;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  
 }
 
 button {
@@ -68,3 +70,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+footer { 
+  border-top: 2px solid #213547;
+  position: absolute; bottom: 0; left: 0; width: 100%;
+ } 
+
+
